<resources>
    <string name="app_name">DevTalk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dev_talk_icon">DevTalk icon</string>
    <string name="next">Next</string>
    <string name="registration">Registration</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="sign_in">Sign In</string>
    <string name="back">Back</string>
    <string name="who_do_you_work_for">Who do you work for?</string>
    <string name="welcome">Welcome!</string>
    <string name="use_our_messenger_and_everything_will_be_fine">Use our messenger and everything will be fine!</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account?</string>
    <string name="select_tags">Select tags</string>
    <string name="result">Result</string>
    <string name="check_if_you_have_chosen_everything_correctly">Check if you have chosen everything correctly</string>
    <string name="please_fill_out_the_forms_below">Please fill out the forms below</string>
    <string name="no_tags">no tags!</string>
    <string name="recommended_chats">Chats</string>
    <string name="personal_chats">My chats</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="create_chat">Create chat</string>
    <string name="default_username">Username</string>
    <string name="default_query_hint">Search…</string>
    <string name="alter_profile">Alter profile</string>
    <string name="my_chats_title">My chats</string>
    <string name="profession_1">Profession №1</string>
    <string name="profession_2">Profession №2</string>
    <string name="profession_3">Profession №3</string>
    <string name="chat_name">Chat name</string>
    <string name="message_input">Text message…</string>
    <string name="send_a_message">Send a message</string>
    <string name="notifications">Notifications</string>
    <string name="members">Members: %1$d</string>
    <string name="back_to_chat">Return back to chat</string>
    <string name="leave_chat">Log out of the chat</string>
    <string name="nothing_was_found_query">Nothing was found for your query</string>
    <string name="profile_toolbar">Profile</string>
    <string name="log_out_menu_item_text">Log out</string>
    <string name="edit_profile_menu_item_text">Edit</string>
    <string name="selected_amount">Selected %1$d out of %2$d</string>
    <string name="add_link_title">Add Link</string>
    <string name="edit_link_title">Edit Link</string>
    <string name="paste_link">Paste username</string>
    <string name="save_btn">Save</string>
    <string name="delete_btn">Delete</string>
    <string name="recommendations">Recommendations</string>
    <string name="is_ready_text">DevTalk is ready</string>
    <string name="processing_data">Processing data</string>
    <string name="data_is_not_correct">The entered data is not correct</string>
    <string name="done_chat_creation">Done</string>
    <string name="choose_chat_tag">Choose chat tag</string>
    <string name="chosen_chat_tag">Chat tag</string>
    <string name="delete_profile">Delete profile</string>
    <string name="alert_title_for_delete_profile">Are you sure?</string>
    <string name="alert_message_for_delete_profile">Deleting this account will result in completely removing your account from the system and you won\'t be able to access the app.</string>
    <string name="alert_positive_button_for_delete_profile">Delete</string>
    <string name="alert_negative_button_for_delete_profile">Cancel</string>
    <string name="alert_title_for_check_internet">No internet connection</string>
    <string name="alert_message_for_check_internet">An active internet connection is required for the application to work.</string>
    <string name="alert_positive_button_for_check_internet">Connect</string>
    <string name="night_mode_on">Night mode ON</string>
    <string name="night_mode_off">Night mode OFF</string>
    <string name="avatar_message_true">Image uploaded</string>
    <string name="avatar_message_false">Failed to upload image</string>
    <string name="account_delete_message">Your account deleted</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="auth_failed_message">Authentication failed. User does not exist</string>
    <string name="validation_email_message">Invalid email format!</string>
    <string name="validation_password_message">Please, enter a password!</string>
    <string name="validation_password_message_two">Minimal length of password 6 characters!</string>
    <string name="validation_username_message">Please, enter your name</string>
    <string name="validation_username_message_two">Please, enter your surname</string>
    <string name="auth_exists_message">User with such an email already exists!</string>
    <string name="current_link">Current username</string>
    <string name="professions_limit_message">You can choose up to 3 professions</string>
    <string name="invalid_username">Enter your first and last name separated by a space</string>
    <string name="status_online">Online</string>
    <string name="status_offline">Offline</string>
    <string name="wait">Wait...</string>
</resources>
