<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@android:color/holo_blue_light"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingBottom="12dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/add_link_title"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/link_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:entries="@array/links"
        android:minHeight="48dp"
        android:padding="12dp" />

    <EditText
        android:id="@+id/user_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:background="#fff"
        android:hint="@string/paste_link"
        android:inputType="textUri"
        android:padding="12dp" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:text="@string/save_btn"
        android:textAllCaps="false" />
</LinearLayout>
