<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_add_link"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingBottom="12dp">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/delete_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:drawablePadding="12dp"
        android:text="@string/edit_link_title"
        android:textColor="?attr/text_color"
        android:textSize="28sp"
        android:textStyle="bold"
        app:drawableEndCompat="@drawable/ic_link"
        app:drawableTint="?attr/text_color" />

    <EditText
        android:id="@+id/user_link"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/delete_title"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/bg_paste_link"
        android:hint="@string/current_link"
        android:inputType="textUri"
        android:padding="12dp"
        android:textColorHint="?attr/text_color" />

    <Button
        android:id="@+id/save_button"
        app:layout_constraintTop_toBottomOf="@id/user_link"
        android:layout_marginTop="12dp"
        android:layout_width="150dp"
        app:layout_constraintStart_toStartOf="@id/user_link"
        android:layout_height="wrap_content"
        android:background="@drawable/first_button"
        android:text="@string/save_btn"
        android:layout_marginEnd="4dp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@id/center_guideline"
        android:textColor="?attr/text_color"
        android:textSize="18sp" />
    <Button
        android:id="@+id/delete_button"
        app:layout_constraintTop_toBottomOf="@id/user_link"
        app:layout_constraintEnd_toEndOf="@id/user_link"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/center_guideline"
        android:layout_marginTop="12dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/first_button"
        android:text="@string/delete_btn"
        android:textAllCaps="false"
        android:textColor="?attr/text_color"
        android:textSize="18sp" />
</androidx.constraintlayout.widget.ConstraintLayout>
