<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color_primary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/registration_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:drawablePadding="20dp"
                android:text="@string/registration"
                android:textColor="@color/green_second"
                android:textSize="28sp"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/ic_registration"
                app:drawableTint="@color/green_second"
                app:layout_constraintBottom_toTopOf="@id/asking"
                app:layout_constraintEnd_toStartOf="@id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/asking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/please_fill_out_the_forms_below"
                android:textColor="?attr/text_color"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/name"
                app:layout_constraintStart_toStartOf="@id/guideline_left" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/rounded_edit"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@id/surname"
                app:layout_constraintStart_toStartOf="@id/guideline_left" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/rounded_edit"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@id/password"
                app:layout_constraintStart_toStartOf="@id/guideline_left" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="40dp"
                android:autofillHints=""
                android:background="@drawable/rounded_edit"
                android:hint="@string/password"
                android:inputType="textPersonName"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@id/next_button"
                app:layout_constraintStart_toStartOf="@id/guideline_left" />

            <Button
                android:id="@+id/next_button"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:background="@drawable/first_button"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="?attr/text_color"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/sign_in_button"
                app:layout_constraintEnd_toStartOf="@id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left" />

            <TextView
                android:id="@+id/question_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:text="@string/already_have_an_account"
                android:textAlignment="center"
                android:textColor="?attr/text_color"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/sign_in_button"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/next_button" />

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="152dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/second_button"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="?attr/text_color"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline_right"
                app:layout_constraintStart_toEndOf="@id/question_text" />

            <EditText
                android:id="@+id/surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/rounded_edit"
                android:hint="@string/surname"
                android:inputType="textPersonName"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@id/username"
                app:layout_constraintStart_toStartOf="@id/guideline_left" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="24dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="24dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
