<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color_primary"
    tools:context="com.dev_talk.main.profile.ProfileFragment">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/alter_profile"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/text_color" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/alter_profile"
        android:text="@string/done_chat_creation"
        android:textAllCaps="false"
        android:textColor="?attr/text_color_secondary"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/chat_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="40dp"
        android:src="@drawable/default_avatar_chat_add"
        app:civ_border_color="@color/green_second"
        app:civ_border_width="2dp"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/done_button" />

    <EditText
        android:id="@+id/chat_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edit"
        android:hint="@string/chat_name"
        android:inputType="textPersonName"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat_image" />

    <Button
        android:id="@+id/choose_tag_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edit"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/choose_chat_tag"
        android:textAllCaps="false"
        android:textColor="?attr/text_color"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat_name" />

</androidx.constraintlayout.widget.ConstraintLayout>
